fixed issue with link underline not showing for pagination when using tab to focus.

--- a/src/components/EpisodesNav/styles.scss
+++ b/src/components/EpisodesNav/styles.scss
@@ -103,6 +103,9 @@
 
 					&:focus {
 						outline: none;
+					}
+
+					&:focus:not(:active) {
 						text-decoration: underline;
 					}
 				}
